--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -78,9 +78,7 @@ In addition to the information provided in the Details section of the card, the 
 * **Prob meas0 prep1**: This parameter indicates the probability of measuring a qubit in the $|0\rangle$ state when it was intended to be prepared in the $|1\rangle$ state, denoted as $P(0|1)$. It reflects errors in state preparation and measurement (SPAM), particularly measurement errors in superconducting qubits.
 * **Prob meas1 prep0**: Similarly, this parameter represents the probability of measuring a qubit in the $|1\rangle$ state when it was intended to be prepared in the $|0\rangle$ state, denoted as $P(1|0)$. Like prob_meas0_prep1, it reflects SPAM errors, with measurement errors being the predominant contributor in superconducting qubits.
 * **Readout length (ns)**: The readout_length specifies the duration of the readout operation for a qubit. It measures the time from the initiation of the measurement pulse to the completion of signal digitization, after which the system is ready for the next operation. Understanding this parameter is crucial for optimizing circuit execution, especially when incorporating mid-circuit measurements.
-* **ID error** - Error in the identity gate, measured from randomized benchmarking. The ID gate is a delay of duration equal to the duration of the √X and X gates. The randomized benchmarking sequence includes SX, ID, and X gates, and it is assumed their errors are the same.
-* **√x (sx) error** - Error in the √X gate, assumed to be the same error as the ID gate measured from randomized benchmarking.
-* **Pauli-X error** - Error in the X gate, assumed to be the same error as the ID gate measured from randomized benchmarking.
+* **ID error / √x (sx) error / Pauli-X error** - Error in the finite-duration discrete one-qubit gates, measured from randomized benchmarking. The randomized benchmarking sequence includes SX, ID, and X gates, and it is assumed their errors are the same. The ID gate is a delay of duration equal to the duration of the √X and X gates.
 * **Single-qubit gate length (ns)** - Duration of a single-qubit gate operation.
 * **RX error** - Error in the RX gate, averaged over the RX angles using a variant of randomized benchmarking.
 * **Z-axis rotation (RZ) error** - Error in the virtual RZ gate. Reported as all 0 since these are performed in software.
