Fixed typos in superposition from obs_isa to full pubs (#3879)
Closes #3877 .

--- a/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "28b2db66-c9d3-43a8-bfba-d90f6fd310e6",
    "metadata": {},
    "outputs": [
@@ -943,7 +943,8 @@
     "res = job.result()\n",
     "\n",
     "# Run the job on the Aer simulator with noise model from real backend\n",
-    "# job = estimator_sim.run([[qc_isa,obs_isa]])\n",
+    "# pubs = [(qc_isa, [[obs1_isa], [obs2_isa], [obs3_isa]])]\n",
+    "# job = estimator_sim.run(pubs)\n",
     "# res=job.result()\n",
     "\n",
     "# Step 4: Return the result in classical form, and analyze.\n",
