--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -59,7 +59,7 @@ The number of physical qubits in a QPU.
 
 ### 2Q error (best)
 
-The lowest two-qubit (2Q) error on any edge of the device from the same batch of measurements used to calculate the median (see Median 2Q error).
+The lowest two-qubit (2Q) error on any edge of the device from the same batch of measurements used to calculate the median (see [Median 2Q error](#median-2q-error-heron-cz-eagle-ecr)).
 
 ### 2Q error (layered) 
 
