--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -46,7 +46,7 @@ The revision version number will increment for fixes that do not break the exist
 
 The first section of the QPU information card provides the following QPU details: 
 
-[Name](#name) | [Qubits](#qubits) | [2Q error (best)](#2q-error-best) | [2Q error (layered)](#2q-error-layered) | [CLOPS (or CLOPS_h)](#clops-or-clops_h) | [Status](#status) | [Region](#region) | [QPU version](#qpu-version) | [Processor type](#processor-type) | [Basis gates](#basis-gates) | [Total pending jobs](#total-pending-jobs) | [Median 2Q error](#median-2q-error-heron-cz-eagle-ecr) |
+[Name](#name) | [Qubits](#qubits) | [2Q error (best)](#2q-error-best) | [2Q error (layered)](#2q-error-layered) | [CLOPS (or CLOPS_h)](#clops-or-clops_h) | [Status](#status) | [Region](#region) | [QPU version](#qpu-version) | [Processor type](#processor-type) | [Basis gates](#native-gates-on-platform) | [Total pending jobs](#total-pending-jobs) | [Median 2Q error](#median-2q-error-heron-cz-eagle-ecr) |
 [Median SX error](#median-sx-error) | [Median readout error](#median-readout-error) | [Median T1 (relaxation time)](#median-t1-relaxation-time) | [Median T2 (dephasing time)](#median-t2-dephasing-time)
 
 ### Name
@@ -123,7 +123,7 @@ To download calibration data as a CSV file, click the download icon in the upper
 
 In addition to the information provided in the Details section of the card, the Calibration data section also includes the following:
 
-[Topology diagram or coupling map](#topology-diagram-or-coupling-map) | [Readout assignment error](#readout-assignment-error) | [Prob meas0 prep1](#prob-meas0-prep1) | [Prob meas1 prep0](#prob-meas1-prep0) | [Readout length (ns)](#readout-length-ns) | [ID error / √x (sx) error / [Pauli-X error]](#id-error--x-sx-error--pauli-x-error) | [Single-qubit gate length (ns)](#single-qubit-gate-length-ns) | [RX error](#rx-error) | [Z-axis rotation (RZ) error](#z-axis-rotation-rz-error) | [Operational](#operational-yesno) | [Gate length (ns)](#gate-length-ns) | [2Q error (best)](#2q-error-best-heron-cz-eagle-ecr) | [RZZ error](#rzz-error-heron)
+[Topology diagram or coupling map](#coupling-map) | [Readout assignment error](#readout-assignment-error) | [Prob meas0 prep1](#prob-meas0-prep1) | [Prob meas1 prep0](#prob-meas1-prep0) | [Readout length (ns)](#readout-length-ns) | [ID error / √x (sx) error / Pauli-X error](#finite-duration-discrete) | [Single-qubit gate length (ns)](#single-qubit-gate-length-ns) | [RX error](#rx-error) | [Z-axis rotation (RZ) error](#z-axis-rotation-rz-error) | [Operational](#operational) | [Gate length (ns)](#gate-length-ns) | [2Q error (best)](#2q-error-best-heron-cz-eagle-ecr) | [RZZ error](#rzz-error-heron)
 
 ### <span id="coupling-map">Topology diagram or coupling map</span>
 
@@ -145,6 +145,7 @@ Similarly, this parameter represents the probability of measuring a qubit in the
 
 The readout_length specifies the duration of the readout operation for a qubit. It measures the time from the initiation of the measurement pulse to the completion of signal digitization, after which the system is ready for the next operation. Understanding this parameter is crucial for optimizing circuit execution, especially when incorporating mid-circuit measurements.
 
+<span id="finite-duration-discrete"></span>
 ### ID error / √x (sx) error / Pauli-X error
 
 Error in the finite-duration discrete one-qubit gates, measured from randomized benchmarking. The randomized benchmarking sequence includes SX, ID, and X gates, and it is assumed their errors are the same. The ID gate is a delay of duration equal to the duration of the √X and X gates.
@@ -161,7 +162,7 @@ Error in the RX gate, averaged over the RX angles using a variant of randomized 
 
 Error in the virtual RZ gate. Reported as all 0 since these are performed in software.
 
-### Operational (Yes/No)
+### Operational
 
 Indicates whether the qubit can be utilized in circuits.
 
