--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -71,7 +71,7 @@ Circuit layer operations per second, is a measure of how many layers of a 100x10
 
 ### Status
 
-The QPU status.
+The QPU status; for example, `Online`, `Paused`, `Offline`, and so on.
 
 ### Region
 
@@ -181,7 +181,7 @@ Error in the RZZ gate averaged over the RZZ angles using a variant of randomized
 
 ## Two-qubit gate error (layered)
 
-The third section provides the expanded view of the lowest `two-qubit gate error (layered)` measured as a function of the number of qubits in the chain. The final value, at chain length 100, is the value presented in the Details section. In practice, six 100-qubit chains (pre-selected based on expected optimal performance) are measured, and the value reported here for number of qubits `N` is the lowest error found in a subset length `N` chain searching over the six 100-qubit chains.
+The third section provides the expanded view of the lowest `two-qubit gate error (layered)` measured as a function of the number of qubits in the chain. The final value, at chain length 100, is the value presented in the Details section. In practice, six 100-qubit chains (pre-selected based on expected optimal performance) are measured, and the value reported for number of qubits `N` is the lowest error found in a subset length `N` chain searching over the six 100-qubit chains.
 
 <span id="available"></span>
 ## View your resources
