--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -123,7 +123,7 @@ To download calibration data as a CSV file, click the download icon in the upper
 
 In addition to the information provided in the Details section of the card, the Calibration data section also includes the following:
 
-[Topology diagram or coupling map](#coupling-map) | [Readout assignment error](#readout-assignment-error) | [Prob meas0 prep1](#prob-meas0-prep1) | [Prob meas1 prep0](#prob-meas1-prep0) | [Readout length (ns)](#readout-length-ns) | [ID error / √x (sx) error / Pauli-X error](#finite-duration-discrete) | [Single-qubit gate length (ns)](#single-qubit-gate-length-ns) | [RX error](#rx-error) | [Z-axis rotation (RZ) error](#z-axis-rotation-rz-error) | [Operational](#operational) | [Gate length (ns)](#gate-length-ns) | [2Q error (best)](#2q-error-best-heron-cz-eagle-ecr) | [RZZ error](#rzz-error-heron)
+[Topology diagram or coupling map](#coupling-map) | [Readout assignment error](#readout-assignment-error) | [Prob meas0 prep1](#prob-meas0-prep1) | [Prob meas1 prep0](#prob-meas1-prep0) | [Readout length (ns)](#readout-length-ns) | [ID error / √x (sx) error / Pauli-X error](#finite-duration-discrete) | [Single-qubit gate length (ns)](#single-qubit-gate-length-ns) | [RX error](#rx-error) | [Z-axis rotation (RZ) error](#z-axis-rotation-rz-error) | [Operational](#operational) | [Gate length (ns)](#gate-length-ns) | [2Q error (best)](#2q-error) | [RZZ error](#rzz-error-heron)
 
 ### <span id="coupling-map">Topology diagram or coupling map</span>
 
@@ -170,7 +170,8 @@ Indicates whether the qubit can be utilized in circuits.
 
 Duration of the two-qubit gate operation.
 
-### 2Q error (best) (Heron: CZ, Eagle: ECR)
+<span id="2q-error"></span>
+### 2Q error (Heron: CZ, Eagle: ECR)
 
 Error in the 2Q gate averaged over the 2Q angles using a variant of randomized benchmarking for arbitrary unitaries.
 
