--- a/docs/guides/monitor-job.ipynb
+++ b/docs/guides/monitor-job.ipynb
@@ -70,7 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d2ss4mputc7s73an0md0\n"
+      "d305ck0ocacs73ajagvg\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ExecutionSpans([DoubleSliceSpan(<start='2025-09-04 16:46:22', stop='2025-09-04 16:46:23', size=24>)])\n"
+      "ExecutionSpans([DoubleSliceSpan(<start='2025-09-09 16:31:16', stop='2025-09-09 16:31:16', size=24>)])\n"
      ]
     }
    ],
@@ -144,8 +144,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.28990128, 0.20627204, 0.41034826],\n",
-       "       [0.38494321, 0.90388651, 0.13690353]])"
+       "array([[0.2260416 , 0.8747859 , 0.44361995],\n",
+       "       [0.94700856, 0.96826017, 0.98426562]])"
       ]
      },
      "execution_count": 3,
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "e025fe52-f626-4ecc-bd1d-d559a6fe9cc8",
    "metadata": {},
    "outputs": [],
@@ -263,17 +263,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "71234371-5b93-42e3-add9-ce4133f9afc4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ExecutionSpans([DoubleSliceSpan(<start='2025-09-04 16:46:22', stop='2025-09-04 16:46:23', size=24>)])"
+       "ExecutionSpans([DoubleSliceSpan(<start='2025-09-09 16:31:16', stop='2025-09-09 16:31:16', size=24>)])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "f2c25fbb-581d-4847-a098-99f409b79fad",
    "metadata": {},
    "outputs": [
@@ -302,9 +302,9 @@
      "output_type": "stream",
      "text": [
       "Number of execution spans: 1\n",
-      "  Start of the first span: 2025-09-04 16:46:22.936924\n",
-      "     End of the last span: 2025-09-04 16:46:23.458428\n",
-      "       Total duration (s): 0.521504\n"
+      "  Start of the first span: 2025-09-09 16:31:16.320568\n",
+      "     End of the last span: 2025-09-09 16:31:16.865858\n",
+      "       Total duration (s): 0.54529\n"
      ]
     }
    ],
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "2321f876-3c5e-4d1d-906e-d4cad55866f2",
    "metadata": {},
    "outputs": [
@@ -333,8 +333,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Start of first span: 2025-09-04 16:46:22.936924\n",
-      "   End of first span: 2025-09-04 16:46:23.458428\n",
+      " Start of first span: 2025-09-09 16:31:16.320568\n",
+      "   End of first span: 2025-09-09 16:31:16.865858\n",
       "#shots in first span: 24\n"
      ]
     }
@@ -367,7 +367,7 @@
  "metadata": {
   "description": "How to monitor or cancel a job submitted to IBM Quantum Platform or IBM Quantum on IBM Cloud",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "runtime-tmp",
    "language": "python",
    "name": "python3"
   },
@@ -381,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.8"
   },
   "title": "Monitor or cancel a job"
  },
