Fix assertion error

--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -161,14 +161,15 @@
      "data": {
       "text/plain": [
        "[QiskitFunction(qunova/hivqe-chemistry),\n",
+       " QiskitFunction(global-data-quantum/quantum-portfolio-optimizer),\n",
        " QiskitFunction(algorithmiq/tem),\n",
-       " QiskitFunction(algorithmiq/tem-gpu),\n",
        " QiskitFunction(qedma/qesem),\n",
        " QiskitFunction(multiverse/singularity),\n",
        " QiskitFunction(ibm/circuit-function),\n",
        " QiskitFunction(q-ctrl/optimization-solver),\n",
+       " QiskitFunction(colibritd/quick-pde),\n",
        " QiskitFunction(q-ctrl/performance-management),\n",
-       " QiskitFunction(kipu-quantum/iskay-quantum-optimizer),\n"
+       " QiskitFunction(kipu-quantum/iskay-quantum-optimizer)]"
       ]
      },
      "execution_count": 2,
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "139ac1d5-3727-4f44-a26c-0d8a1d8a58f2",
    "metadata": {
     "scrolled": true,
@@ -235,14 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9b9a7a3c-cc98-4c19-93cd-f59793515c70",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'6054eb66-f2f2-48d4-9f68-333bd8559379'"
+       "'7f08c9d5-471b-4da2-92e7-4f2cb94c23a8'"
       ]
      },
      "execution_count": 5,
@@ -377,26 +378,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "4becfe13-68dd-481d-bb43-fc502c254623",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<Job | 6054eb66-f2f2-48d4-9f68-333bd8559379>,\n",
-       " <Job | a7464168-eff6-4676-a481-ea4d2dd1a13b>,\n",
-       " <Job | 2765f0c1-7973-48f6-a5c2-746141f51761>,\n",
-       " <Job | 75b30e22-0953-4c83-9ff7-a5797ffaddcf>,\n",
-       " <Job | 93018ba6-40b2-439e-a517-1c05e26bef01>,\n",
-       " <Job | fe82a257-ea09-4229-9189-feea41fc5481>,\n",
-       " <Job | 466e9122-16b5-493b-9006-7456970663cd>,\n",
-       " <Job | 5fd4eb03-0fb8-4ace-a4f2-33cb18025f9b>,\n",
-       " <Job | 7b958091-600e-449a-a167-75fe11075c9d>,\n",
-       " <Job | eaa2db93-0d2f-4b52-9f1b-a69fc03dc3d6>]"
+       "[<Job | f6c29f49-4d5f-4fff-aca6-2e9a115b9763>,\n",
+       " <Job | 7f08c9d5-471b-4da2-92e7-4f2cb94c23a8>,\n",
+       " <Job | 62fe9176-d1e5-467e-b2bd-7a3f3c7be4e5>,\n",
+       " <Job | af525b2e-16b1-45a1-80bb-dbd94ce30258>,\n",
+       " <Job | b95a7a57-c1ad-4958-b7ac-953e4e1ee824>,\n",
+       " <Job | 7bfa33da-0f17-4e67-84b6-f556f7eeb436>,\n",
+       " <Job | ca46c191-9eb9-4de6-bfa7-b60d7eb29b5e>,\n",
+       " <Job | 6ac0ba93-3831-43fb-9fb9-760da2225e06>,\n",
+       " <Job | f0e38071-060d-47e8-988d-9cc1f69358e3>,\n",
+       " <Job | 629cf110-e490-4675-8a07-f6d298d166b0>]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,10 +417,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "18d87f07-8a8e-4b93-80d0-7c07e49272e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f6c29f49-4d5f-4fff-aca6-2e9a115b9763\n"
+     ]
+    }
+   ],
    "source": [
     "# First, get the most recent job that has been executed.\n",
     "latest_job = old_jobs[0]\n",
@@ -428,7 +437,7 @@
     "job_by_id = catalog.get_job_by_id(latest_job.job_id)\n",
     "\n",
     "# Verify that the job is the same using both retrieval methods.\n",
-    "assert job_by_id == latest_job\n",
+    "assert job_by_id.job_id == latest_job.job_id\n",
     "\n",
     "# Print the job_id for this job.\n",
     "print(job_by_id.job_id)"
@@ -463,7 +472,7 @@
  "metadata": {
   "description": "Explore IBM Qiskit Functions Catalog, abstracted circuit function and application function services designed to accelerate research and application prototyping.",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "qiskit-documentation-3.12",
    "language": "python",
    "name": "python3"
   },
@@ -477,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.8"
   },
   "title": "Introduction to Qiskit Functions"
  },
