--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -472,7 +472,7 @@
  "metadata": {
   "description": "Explore IBM Qiskit Functions Catalog, abstracted circuit function and application function services designed to accelerate research and application prototyping.",
   "kernelspec": {
-   "display_name": "qiskit-documentation-3.12",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -486,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "title": "Introduction to Qiskit Functions"
  },
