--- a/docs/guides/access-groups.mdx
+++ b/docs/guides/access-groups.mdx
@@ -6,7 +6,7 @@ description: How to create and manage access groups for your organization's acco
 
 # Create access policies and access groups
 
-When you create an instance in IBM Quantum Platform, an access group is automatically generated for collaborators to use that instance. If you want to customize that access group or create other access groups, use the IBM&reg; Cloud console for [Access groups](https://cloud.ibm.com/iam/groups).
+When you create an instance in IBM Quantum&reg; Platform, an access group is automatically generated for collaborators to use that instance. If you want to customize that access group or create other access groups, use the IBM&reg; Cloud console for [Access groups](https://cloud.ibm.com/iam/groups).
 
 An _access group_ contains _policies_, which define the actions that access group members can take on specific resources, such as services.  In this guide, the resource is generally an IBM Quantum _service instance_.
 
@@ -18,7 +18,7 @@ To determine the actions allowed by each role, from the [IAM Roles](https://clou
 </Admonition>
 
 ## Create an IBM Quantum Administrators access group
-After setting up an account for your organization, it's recommended that you create an  IBM Quantum Administrators access group. This access group lets other users create and manage instances, and manage user access for the Qiskit Runtime service.
+After setting up an account for your organization, it's recommended that you create an IBM Quantum Administrators access group. This access group lets other users create and manage instances, and manage user access for the Qiskit Runtime service.
 
 When you create this access group, include the following policies:
 
