--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -83,7 +83,7 @@ The version number of a QPU in the form `major.minor.revision`. See [QPU version
 
 ### Processor type
 
-Reflects the [topology](/docs/guides/qpu-information) and indicates the approximate qubit count.
+Reflects the [topology](#coupling-map) and indicates the approximate qubit count.
 
 ### Basis gates<span id="native-gates-on-platform"></span>
 
