--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -13,6 +13,10 @@ Explore all public IBM QPUs by navigating to the [Compute resources](https://qua
 
 This page describes the detailed information you will find on the QPU information card.
 
+<Admonition type="note" title="Undefined error value">
+If the benchmarking of a qubit or edge does not succeed over the course of several days, whether due to poor data quality or other internal factors, the reported error value is considered stale and will be reported as 1. This is not an indication that the qubit or edge is necessarily non-working or that the error is 1; rather, the error is considered undefined and you should proceed with caution when operating that qubit or gate. 
+</Admonition>
+
 ## QPU versioning
 
 Each QPU has a version number in the form X.Y.Z (major.minor.revision). A circuit compiled for a given version number is guaranteed to run on that QPU. If the revision number changes, the circuit will continue to run. If the major or minor number changes, the circuit is not guaranteed to run, although it may do so. The conditions under which a version number may change are listed below:
@@ -203,8 +207,8 @@ You can also view your available QPUs by using the [backends API.](/docs/api/qis
 
 | Operation category |  Name |
 | :--- | :--- |
-| Single-qubit gates | [RZ](/docs/api/qiskit/qiskit.circuit.library.RZGate), [SX](/docs/api/qiskit/qiskit.circuit.library.SXGate), [X](/docs/api/qiskit/qiskit.circuit.library.XGate), [ID](/docs/api/qiskit/qiskit.circuit.library.IGate), [delay](/docs/api/qiskit/circuit#qiskit.circuit.Delay) |
-| Two-qubit gates | [CZ](/docs/api/qiskit/qiskit.circuit.library.CZGate), [ECR](/docs/api/qiskit/qiskit.circuit.library.ECRGate)|
-| Fractional gates | [RX](/docs/api/qiskit/qiskit.circuit.library.RXGate) (single-qubit), [RZZ](/docs/api/qiskit/qiskit.circuit.library.RZZGate) (two-qubit) |
-| Non-unitary instructions | [measure](/docs/api/qiskit/circuit#qiskit.circuit.Measure), [reset](/docs/api/qiskit/circuit#qiskit.circuit.Reset) |
-| Control flow | [if_else](/docs/api/qiskit/qiskit.circuit.IfElseOp) (classical feedforward) |
+| Single-qubit gates | [`RZ`](/docs/api/qiskit/qiskit.circuit.library.RZGate), [`SX`](/docs/api/qiskit/qiskit.circuit.library.SXGate), [`X`](/docs/api/qiskit/qiskit.circuit.library.XGate), [`ID`](/docs/api/qiskit/qiskit.circuit.library.IGate), [`delay`](/docs/api/qiskit/circuit#qiskit.circuit.Delay) |
+| Two-qubit gates | [`CZ`](/docs/api/qiskit/qiskit.circuit.library.CZGate), [`ECR`](/docs/api/qiskit/qiskit.circuit.library.ECRGate)|
+| Fractional gates | [`RX`](/docs/api/qiskit/qiskit.circuit.library.RXGate) (single-qubit), [`RZZ`](/docs/api/qiskit/qiskit.circuit.library.RZZGate) (two-qubit) |
+| Non-unitary instructions | [`measure`](/docs/api/qiskit/circuit#qiskit.circuit.Measure), [`reset`](/docs/api/qiskit/circuit#qiskit.circuit.Reset) |
+| Control flow | [`if_else`](/docs/api/qiskit/qiskit.circuit.IfElseOp) (classical feedforward) |
