--- a/docs/tutorials/global-data-quantum-optimizer.ipynb
+++ b/docs/tutorials/global-data-quantum-optimizer.ipynb
@@ -90,7 +90,7 @@
    "id": "ab6114f0-fad3-4f44-809d-3ff966f2b2ea",
    "metadata": {},
    "source": [
-    "# Setup"
+    "## Setup"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "id": "0856b7ca-8cf5-457d-ac08-df83a02852af",
    "metadata": {},
    "source": [
-    "# Step 1: Read the input portfolio\n",
+    "## Step 1: Read the input portfolio\n",
     "\n",
     "In this step, we load historical data for the seven selected assets from the IBEX 35 index, specifically from **November 1, 2022** to **April 1, 2023**.\n",
     "\n",
@@ -234,7 +234,7 @@
    "id": "fbd9f5aa-dc2d-48bb-805f-ae0d55aedc54",
    "metadata": {},
    "source": [
-    "# Step 2: Define the problem inputs"
+    "## Step 2: Define the problem inputs"
    ]
   },
   {
@@ -358,7 +358,7 @@
    "id": "7bc6ac05-5c0b-418e-9978-8dd5bdcd97c4",
    "metadata": {},
    "source": [
-    "# Step 3: Analyze the optimization results"
+    "## Step 3: Analyze the optimization results"
    ]
   },
   {
