add the word citation
closes https://github.com/Qiskit/documentation/issues/3629

--- a/docs/support/faq.mdx
+++ b/docs/support/faq.mdx
@@ -17,7 +17,7 @@ For research papers, we encourage authors to acknowledge IBM Quantum&reg; by usi
 
 >    We acknowledge the use of IBM Quantum services for this work. The views expressed are those of the authors, and do not reflect the official policy or position of IBM or the IBM Quantum team.
 
-Paper references should be cited as follows:
+Paper references should use the following citation:
 
 > IBM Quantum. https://<span>quantum.cloud.ibm.com</span>/, YYYY
 
@@ -33,7 +33,7 @@ Example of citing an IBM Quantum program:
 
 ## How do I cite IBM Quantum Composer in my research?
 
-Example of citing IBM Quantum Composer:
+Example citation for IBM Quantum Composer:
 
 > IBM Quantum Composer. 2025. url: https://<span>quantum.cloud.ibm.com/composer</span>
 
