Apply suggestions from code review
Co-authored-by: Fran Cabrera <francabrera@users.noreply.github.com>

--- a/docs/guides/access-groups.mdx
+++ b/docs/guides/access-groups.mdx
@@ -19,6 +19,7 @@ To determine the actions allowed by each role, from the [IAM Roles](https://clou
 The [Compare pre-defined service role actions](#compare-actions) section provides a comparison of the pre-defined Manager, Editor, and Viewer roles.
 </Admonition>
 
+<span id="create-ibm-quantum-administrators"></span>
 ## Create an IBM Quantum Administrators access group
 After setting up an account for your organization, it's recommended that you create an IBM Quantum Administrators access group. This access group lets other users create and manage instances, and manage user access for the Qiskit Runtime service.
 
@@ -221,9 +222,9 @@ You can only invite users who are already members of the account.  If you don't 
 
 ## Compare permissions
 
-The following table displays which permissions are granted to account owners and access groups.
+The following table displays which permissions are granted to three entities: account owners, IBM Quantum Administrators (see the [Create an IBM Quantum Administrators access group](#create-ibm-quantum-administrators) section), and instance collaborators (a "Collaborators" access group is automatically generated whenever you create an instance using IBM Quantum Platform) .
 
-| Permissions | Account owner | Qiskit Runtime administrator (access group) | Instance collaborator (access group) |
+| Permissions | Account owner | IBM Quantum Administrators (access group) | Instance collaborators (access group) |
 | --- | --- | --- | --- |
 | Full access to all IBM Cloud resources | | | | 
 | Assign access to others | | | | 
