--- a/docs/guides/access-groups.mdx
+++ b/docs/guides/access-groups.mdx
@@ -226,21 +226,21 @@ The following table displays which permissions are granted to three entities: ac
 
 | Permissions | Account owner | IBM Quantum Administrators (access group) | Instance collaborators (access group) |
 | --- | --- | --- | --- |
-| Full access to all IBM Cloud resources | | | | 
-| Assign access to others | | | | 
-| Create service instances  | | | | 
-| View all users | | | | 
-| Set user visibility | | | | 
-| Invite users to the account | | | | 
-| Billing responsibility | | | | 
-| View billing information | | | | 
-| Owner notifications | | | | 
-| Submit quantum workloads | | | | 
-| View others' quantum workloads | | | | 
-| Cancel others' quantum workloads | | | | 
-| Delete others' quantum workloads | | | | 
-| Create support cases | | | | 
-| Configure an [identity provider](https://cloud.ibm.com/iam/identity-providers) to connect your external user repositories to your IBM Cloud account | | | | 
+| Full access to all IBM Cloud resources | ✅| ✅| ❌| 
+| Assign access to others | ✅| ✅| ❌| 
+| Create service instances  | ✅| ✅| ❌| 
+| View all users | ✅| ✅| ✴️| 
+| Set user visibility | ✅| ❌| ❌| 
+| Invite users to the account | ✅| ✅| ❌| 
+| Billing responsibility | ✅| ❌| ❌| 
+| View billing information | ✅| ✅| ❌| 
+| Owner notifications | ✅| ❌| ❌| 
+| Submit quantum workloads | ✅| ✅| ✅| 
+| View others' quantum workloads | ✅| ✅| ✅| 
+| Cancel others' quantum workloads | ✅| ✅| ✅| 
+| Delete others' quantum workloads | ✅| ✅| ❌| 
+| Create support cases | ✅| ✅| ✅| 
+| Configure an [identity provider](https://cloud.ibm.com/iam/identity-providers) to connect your external user repositories to your IBM Cloud account | ✅| ❌| ❌| 
 
 <span id="compare-actions"></span>
 ## Compare pre-defined service role actions
