Audit of DefinitionTooltips

--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/query-model-of-computation.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/query-model-of-computation.ipynb
@@ -21,9 +21,11 @@
     "\n",
     "In the *query model* of computation, the entire input is not provided to the computation like in a more standard model suggested above.\n",
     "Rather, the input is made available in the form of a *function*, which the computation accesses by making *queries*.\n",
-    "Alternatively, we may view computations in the query model as having\n",
-    "<DefinitionTooltip definition=\"Random access, also known as direct access, refers to the ability to look at elements at chosen positions within a sequence directly, without having to scan through the entire sequence to find them (which is called sequential access).\">random access</DefinitionTooltip>\n",
-    "to bits (or segments of bits) of the input.\n",
+    "Alternatively, we may view computations in the query model as having random access to bits (or segments of bits) of the input.\n",
+    "\n",
+    "<Admonition type=\"note\">\n",
+    "Random access, also known as direct access, refers to the ability to look at elements at chosen positions within a sequence directly, without having to scan through the entire sequence to find them (which is called sequential access).\n",
+    "</Admonition>\n",
     "\n",
     "![Illustration of a computation in the query model.](/learning/images/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/query-computation.svg)\n",
     "\n",
