--- a/learning/courses/basics-of-quantum-information/single-systems/introduction.ipynb
+++ b/learning/courses/basics-of-quantum-information/single-systems/introduction.ipynb
@@ -13,7 +13,9 @@
     "\n",
     "<IBMVideo id=\"134056207\" title=\"In this video, John Watrous describes classical and quantum state vectors. He introduces some critical notation for quantum states and operators, including unitary matrices for operations on qubit systems.\"/>\n",
     "\n",
-    "This lesson introduces the basic framework of <DefinitionTooltip definition=\"Quantum information is both a concept and a framework for modeling and describing information in quantum systems. While it is based on and motivated by quantum physics, the physical details can largely be abstracted away, leaving a mathematical framework that is applicable to a variety of specific physical systems.\">quantum information</DefinitionTooltip>, including the description of quantum states as vectors with complex number entries, measurements that allow classical information to be extracted from quantum states, and operations on quantum states that are described by unitary matrices.\n",
+    "This lesson introduces the basic framework of quantum information, including the description of quantum states as vectors with complex number entries, measurements that allow classical information to be extracted from quantum states, and operations on quantum states that are described by unitary matrices.\n",
+    "Quantum information is both a concept and a framework for modeling and describing information in quantum systems.\n",
+    "While it is based on and motivated by quantum physics, the physical details can largely be abstracted away, leaving a mathematical framework that is applicable to a variety of specific physical systems.\n",
     "\n",
     "We will restrict our attention in this lesson to the comparatively simple setting in which a *single system* is considered in isolation.\n",
     "In the next lesson, we'll expand our view to *multiple systems,* which can interact with one another and be correlated."
