test black checkmark

--- a/docs/guides/access-groups.mdx
+++ b/docs/guides/access-groups.mdx
@@ -222,7 +222,16 @@ You can only invite users who are already members of the account.  If you don't 
 
 ## Compare permissions
 
-The following table displays which permissions are granted to three entities: account owners, IBM Quantum Administrators (see the [Create an IBM Quantum Administrators access group](#create-ibm-quantum-administrators) section), and instance collaborators (a "Collaborators" access group is automatically generated whenever you create an instance using IBM Quantum Platform) .
+The following table displays which permissions are granted to three entities: account owners, IBM Quantum Administrators (see the [Create an IBM Quantum Administrators access group](#create-ibm-quantum-administrators) section), and instance collaborators (a "Collaborators" access group is automatically generated whenever you create an instance using IBM Quantum Platform).
+
+Key:
+
+✔️ Has permission
+
+✴️ Involves a dependency
+
+❌ Does not have permission
+   
 
 | Permissions | Account owner | IBM Quantum Administrators (access group) | Instance collaborators (access group) |
 | --- | --- | --- | --- |
