updated check-in answer

--- a/learning/courses/quantum-machine-learning/data-encoding.ipynb
+++ b/learning/courses/quantum-machine-learning/data-encoding.ipynb
@@ -174,14 +174,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b96f0bfc-a892-4f68-84a6-1859381f099d",
-   "metadata": {},
-   "source": [
-    "This example illustrates a couple of disadvantages of basis encoding. While it is simple to understand, the state vectors can become quite sparse, and schemes to implement it are usually not efficient."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "887174c0-6a8b-438d-84cc-80451352d9e9",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
@@ -206,35 +198,29 @@
     "import math\n",
     "from qiskit import QuantumCircuit\n",
     "\n",
-    "desired_state = [\n",
-    "    0,\n",
-    "    0,\n",
-    "    0,\n",
-    "    0,\n",
-    "    1 / math.sqrt(3),\n",
-    "    1 / math.sqrt(3),\n",
-    "    0,\n",
-    "    0,\n",
-    "    1 / math.sqrt(3),\n",
-    "    0,\n",
-    "    0,\n",
-    "    0,\n",
-    "    0,\n",
-    "    0,\n",
-    "    0,\n",
-    "    0,\n",
-    "]\n",
+    "# Data point to encode\n",
+    "x = 4  # binary: 0100\n",
+    "y = 8  # binary: 1000\n",
+    "z = 5  # binary: 0101\n",
     "\n",
-    "print(desired_state)\n",
+    "# Convert each to 4-bit binary list\n",
+    "x_bits = [int(b) for b in format(x, '04b')]  # [0,1,0,0]\n",
+    "y_bits = [int(b) for b in format(y, '04b')]  # [1,0,0,0]\n",
+    "z_bits = [int(b) for b in format(z, '04b')]  # [0,1,0,1]\n",
     "\n",
-    "qc = QuantumCircuit(4)\n",
-    "qc.initialize(desired_state, [0, 1, 2, 3])\n",
-    "qc.decompose(reps=7).draw(output=\"mpl\")\n",
+    "# Combine all bits\n",
+    "all_bits = x_bits + y_bits + z_bits  # [0,1,0,0,1,0,0,0,0,1,0,1]\n",
+    "\n",
+    "# Initialize a 12-qubit quantum circuit\n",
+    "qc = QuantumCircuit(12)\n",
+    "\n",
+    "# Apply x-gates where the bit is 1\n",
+    "for idx, bit in enumerate(all_bits):\n",
+    "    if bit == 1:\n",
+    "        qc.x(idx)\n",
+    "\n",
+    "qc.draw('mpl')\n",
     "```\n",
-    "\n",
-    "[0, 0, 0, 0, 0.5773502691896258, 0.5773502691896258, 0, 0, 0.5773502691896258, 0, 0, 0, 0, 0, 0, 0]\n",
-    "\n",
-    "![\"Output of the previous code cell\"](/learning/images/courses/quantum-machine-learning/data-encoding/checkin1.avif)\n",
     "\n",
     "</details>"
    ]
