--- a/docs/guides/visualize-results.ipynb
+++ b/docs/guides/visualize-results.ipynb
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PrimitiveResult([SamplerPubResult(data=DataBin(meas=BitArray(<shape=(), num_shots=4096, num_bits=2>)), metadata={'circuit_metadata': {}})], metadata={'execution': {'execution_spans': {'__type__': 'ExecutionSpans', '__value__': {'spans': [DoubleSliceSpan(<start='2025-09-01 07:08:55', stop='2025-09-01 07:08:57', size=4096>)]}}}, 'version': 2})\n"
+      "PrimitiveResult([SamplerPubResult(data=DataBin(meas=BitArray(<shape=(), num_shots=4096, num_bits=2>)), metadata={'circuit_metadata': {}})], metadata={'execution': {'execution_spans': {'__type__': 'ExecutionSpans', '__value__': {'spans': [DoubleSliceSpan(<start='2025-09-11 15:56:43', stop='2025-09-11 15:56:44', size=4096>)]}}}, 'version': 2})\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
     {
      "data": {
       "text/plain": [
-       "<Image src=\"/docs/images/guides/visualize-results/extracted-outputs/57d8053e-d030-460d-9c1f-772e53b1a49b-0.svg\" alt=\"Output of the previous code cell\" />"
+       "<Image src=\"/docs/images/guides/visualize-results/extracted-outputs/57d8053e-d030-460d-9c1f-772e53b1a49b-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
      "execution_count": 3,
@@ -147,7 +147,7 @@
     {
      "data": {
       "text/plain": [
-       "<Image src=\"/docs/images/guides/visualize-results/extracted-outputs/bd70e13f-5c52-42fb-8dde-980b15e3604a-0.svg\" alt=\"Output of the previous code cell\" />"
+       "<Image src=\"/docs/images/guides/visualize-results/extracted-outputs/bd70e13f-5c52-42fb-8dde-980b15e3604a-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
      "execution_count": 4,
@@ -214,7 +214,7 @@
     {
      "data": {
       "text/plain": [
-       "<Image src=\"/docs/images/guides/visualize-results/extracted-outputs/17c9893a-d1bf-4726-b444-6dce1d56805f-2.svg\" alt=\"Output of the previous code cell\" />"
+       "<Image src=\"/docs/images/guides/visualize-results/extracted-outputs/17c9893a-d1bf-4726-b444-6dce1d56805f-2.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
      "metadata": {},
@@ -289,7 +289,7 @@
     {
      "data": {
       "text/plain": [
-       "<Image src=\"/docs/images/guides/visualize-results/extracted-outputs/4eb79f4b-36b5-4797-a1a0-67d881d46ca4-1.svg\" alt=\"Output of the previous code cell\" />"
+       "<Image src=\"/docs/images/guides/visualize-results/extracted-outputs/4eb79f4b-36b5-4797-a1a0-67d881d46ca4-1.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
      "metadata": {},
