--- a/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
+++ b/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
@@ -142,7 +142,7 @@
    "id": "16948f21-a39b-4444-bf02-5f81331825c4",
    "metadata": {},
    "source": [
-    "### Setting up backend and coupling map"
+    "### Set up backend and coupling map"
    ]
   },
   {
